--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "nodejs-restapi-poc",
   "version": "1.0.0",
   "description": "A NodeJS REST API poc",
-  "scripts": 
-  "start": "node app.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest",
     "start": "nodemon app.js",
